---
source: spade-tests/src/hir_lowering.rs
---
pipeline(-1) x(clk: clock) -> bool {
    true
}

error: Negative pipeline depth
  ┌─ testinput:1:10
  │
1 │ pipeline(-1) x(clk: clock) -> bool {
  │          ^^ Expected non-negative depth, found -1
